--- a/product.html
+++ b/product.html
@@ -714,12 +714,12 @@ a{
     </div>
 
     <div class="logo">
-        <img src="./logo.png" alt="error" id="logo1">
+        <img src="./images/logo.png" alt="error" id="logo1">
         <div class="search">
         <input type="text" placeholder="Search FashionHub" name="search" style="border:none;width: 300px;"/>
         <input type="submit" value="Search"  id="search1" style="border: none;background-color:rgb(4, 77, 77) ;color: white; width: 100px;"/>
         </div>
-        <img src="./paymnt.jpg" alt="error" id="paymnt">
+        <img src="./images/paymnt.jpg" alt="error" id="paymnt">
     </div>
 
     <hr style="line-height: -0.8px;">
@@ -1032,10 +1032,10 @@ a{
     
     <div style="height: 50px;">
       <img src="https://images.ctfassets.net/5de70he6op10/4gWq1G4qLLgmqlNeHfzV2T/55298745127c36c5876f4013434c0c37/Download_on_the_App_Store_Badge_US-UK_RGB_wht_092917_Copy_2.svg" alt="" style="margin-left: 550px;">
-      <a href=""><img src="./p.jpg" alt="" style="margin-bottom: 2px;"></a>
-      <a href="" style="margin-left: 20px;margin-top: 30px;"><img src="./i.jpg" alt=""></a>
-      <a href="" style="margin-left: 20px;"><img src="./f.jpg" alt="" style="margin-bottom: 2px;"></a>
-      <a href="" style="margin-left: 20px;margin-bottom: 20px;"><img src="./t.jpg" alt="" style="margin-bottom: 2px;"></a>
+      <a href=""><img src="./images/p.jpg" alt="" style="margin-bottom: 2px;"></a>
+      <a href="" style="margin-left: 20px;margin-top: 30px;"><img src="./images/i.jpg" alt=""></a>
+      <a href="" style="margin-left: 20px;"><img src="./images/f.jpg" alt="" style="margin-bottom: 2px;"></a>
+      <a href="" style="margin-left: 20px;margin-bottom: 20px;"><img src="./images/t.jpg" alt="" style="margin-bottom: 2px;"></a>
     
     </div>
     <div>
