--- a/cart.html
+++ b/cart.html
@@ -577,11 +577,11 @@ a{
 </style>
 <body>
    <!-- Nav Bar -->
-   <div class="stick">
+   <!-- <div class="stick">
     <p><i>FROCKS FULL OF SUNSHINE</i></p>
     <p>these springs foavorites had us at yellow</p>
     <a href="">shop the new collection</a>
-</div>
+</div> -->
 
 <div class="select1">
     <div>
@@ -593,18 +593,18 @@ a{
     </select>
     </div>
     <div>
-        <a href=""><p>Sign In/Sign Up</p></a>
+        <!-- <a href=""><p>Sign In/Sign Up</p></a> -->
         <!-- <button id="open-popup-btn">Log In & Sign In</button> -->
     </div>
 </div>
 
 <div class="logo">
-    <img src="./logo.png" alt="error" id="logo1">
+  <a href="./index.html"><img src="./images/logo.png" alt="error" id="logo1"></a>
     <div class="search">
     <input type="text" placeholder="Search FashionHub" name="search" style="border:none;width: 300px;"/>
     <input type="submit" value="Search"  id="search1" style="border: none;background-color:rgb(4, 77, 77) ;color: white; width: 100px;"/>
     </div>
-    <a href="cart.html"><img src="./paymnt.jpg" alt="error" id="paymnt"></a>
+    <a href="cart.html"><img src="./images./paymnt.jpg" alt="error" id="paymnt"></a>
 </div>
 
 <hr style="line-height: -0.8px;">
@@ -637,7 +637,7 @@ a{
 </div>
 
 <div class="drop_down">
-    <button class="drop_button">Clothing</button>
+    <button class="drop_button" onclick="product()">Clothing</button>
     <div class="dropdown_cont">
 
       <a href="#">Pants</a>
@@ -922,10 +922,10 @@ a{
 
 <div style="height: 50px;">
   <img src="https://images.ctfassets.net/5de70he6op10/4gWq1G4qLLgmqlNeHfzV2T/55298745127c36c5876f4013434c0c37/Download_on_the_App_Store_Badge_US-UK_RGB_wht_092917_Copy_2.svg" alt="" style="margin-left: 550px;">
-  <a href=""><img src="./p.jpg" alt="" style="margin-bottom: 2px;"></a>
-  <a href="" style="margin-left: 20px;margin-top: 30px;"><img src="./i.jpg" alt=""></a>
-  <a href="" style="margin-left: 20px;"><img src="./f.jpg" alt="" style="margin-bottom: 2px;"></a>
-  <a href="" style="margin-left: 20px;margin-bottom: 20px;"><img src="./t.jpg" alt="" style="margin-bottom: 2px;"></a>
+  <a href=""><img src="./images/p.jpg" alt="" style="margin-bottom: 2px;"></a>
+  <a href="" style="margin-left: 20px;margin-top: 30px;"><img src="./images/i.jpg" alt=""></a>
+  <a href="" style="margin-left: 20px;"><img src="./images/f.jpg" alt="" style="margin-bottom: 2px;"></a>
+  <a href="" style="margin-left: 20px;margin-bottom: 20px;"><img src="./images/t.jpg" alt="" style="margin-bottom: 2px;"></a>
 
 </div>
 <div>
@@ -1133,4 +1133,7 @@ let item=document.getElementById("para-1");
 
 
  })
+ function product(){
+   window.location.href="./product.html";
+}
 </script>
