--- a/done.html
+++ b/done.html
@@ -26,7 +26,7 @@ body{
   /* border: 5px solid red; */
   padding: 2%;
   border-radius:15px;
-  background-color: rgb(14, 14, 194);
+  background-color: teal;
    
 }
 #button-2{
@@ -36,20 +36,20 @@ body{
   /* border: 5px solid red; */
   padding: 2%;
   border-radius:15px;
-  background-color: rgb(14, 14, 194);;
+  background-color: teal;
 }
 #button-1 a{
     display: block;
     color: aliceblue;
     padding: 3%;
-    border: 1px solid rgb(14, 14, 194);;
-    background-color: rgb(14, 14, 194);;
+    /* border: 1px solid rgb(14, 14, 194);; */
+    background-color: teal;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
 }
 #button-1 a:hover {
     background-color: white;
-    color: rgb(14, 14, 194);;
+    color: white;
     text-decoration: none;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
@@ -58,8 +58,8 @@ body{
     display: block;
     color: aliceblue;
     padding: 3%;
-    border: 1px solid rgb(14, 14, 194);;
-    background-color: rgb(14, 14, 194);;
+    /* border: 1px solid rgb(14, 14, 194);; */
+    background-color: teal;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
 }
@@ -73,8 +73,13 @@ body{
 
 </style>
 <body>
-   <div id="button-1" ><a href="" style="text-decoration: none;">Order placed successfully</a></div>
-   <div id="button-2"><a href="" style="text-decoration: none;">Click Here to Home Page</a></div>
+   <div id="button-1" ><h1 style="color: white;">Order placed successfully</h1></div>
+   <div id="button-2" ><a href="./index.html" style="text-decoration: none; ">Click Here to Home Page</a></div>
    
 </body>
 </html>
+<script>
+//   document.getElementById("button-2").addEventListener("") order(){
+//         window.location.href="/index.html"
+//     }
+</script>
