--- a/index.html
+++ b/index.html
@@ -236,15 +236,15 @@
 
 
     <div class="pic1">
-        <a href=""><img src="https://images.ctfassets.net/5de70he6op10/12Fav7kMsNCFfp6IlqCoHg/ea5ea1b9ecc44d58249cd482bc3a580d/473929275-ls_m0_banner_f.jpg?w=630&q=80&fm=webp" alt="err" id="i1"></a>
-        <a href=""><img src="https://images.ctfassets.net/5de70he6op10/1yCt23d6XxdmkjGohde5ev/97f13874f53c019005210e6a690f3836/473929257-ls_m0_banner_a.jpg?w=630&q=80&fm=webp" alt="err"></a>
-        <a href=""><img src="https://images.ctfassets.net/5de70he6op10/6sUQEatinxFVFTiPZ2WGFG/a0deaee57126fbd5c17e9be6f3f107a1/473929265-ls_m0_banner_b.jpg?w=630&q=80&fm=webp" alt="err"></a>
-        <a href=""><img src="https://images.ctfassets.net/5de70he6op10/5KjWlD2oXag0PlTbafqAWL/2a4e32e4cfc0b818e4cda11687d1498b/473929283-ls_m0_banner_h.jpg?w=630&q=80&fm=webp" alt="err"></a>
+        <a href="./product.html"><img src="https://images.ctfassets.net/5de70he6op10/12Fav7kMsNCFfp6IlqCoHg/ea5ea1b9ecc44d58249cd482bc3a580d/473929275-ls_m0_banner_f.jpg?w=630&q=80&fm=webp" alt="err" id="i1"></a>
+        <a href="./product.html"><img src="https://images.ctfassets.net/5de70he6op10/1yCt23d6XxdmkjGohde5ev/97f13874f53c019005210e6a690f3836/473929257-ls_m0_banner_a.jpg?w=630&q=80&fm=webp" alt="err"></a>
+        <a href="./product.html"><img src="https://images.ctfassets.net/5de70he6op10/6sUQEatinxFVFTiPZ2WGFG/a0deaee57126fbd5c17e9be6f3f107a1/473929265-ls_m0_banner_b.jpg?w=630&q=80&fm=webp" alt="err"></a>
+        <a href="./product.html"><img src="https://images.ctfassets.net/5de70he6op10/5KjWlD2oXag0PlTbafqAWL/2a4e32e4cfc0b818e4cda11687d1498b/473929283-ls_m0_banner_h.jpg?w=630&q=80&fm=webp" alt="err"></a>
     </div>
 
 
     <div class="shop">
-      <button><a href="">shop dresses</a></button>
+      <button><a href="./product.html">shop dresses</a></button>
     </div>
 
 
@@ -615,7 +615,7 @@ $('.js-filter').on('click', function(){
   }
 });
 function product(){
-   window.location.href="/product.html";
+   window.location.href="./product.html";
 }
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
