--- a/order.html
+++ b/order.html
@@ -16,7 +16,7 @@
         <div class="navigator">
             <div class="navbar">
                 <div class="logo">
-                    <img src="./images/logo.png" alt="">
+                    <!-- <a href="./index.html"><img src="./images/logo.png" alt="error" id="logo1"></a> -->
                 </div>
                 <div class="links">
                     <a href="./Admin_Home.html">Dashboard</a>
