--- a/payment.html
+++ b/payment.html
@@ -16,8 +16,8 @@
 	        <div id="pay_alert2"></div>
 			<form id="Form">
 				Accepted Card <br>
-				<img src="/card1.png" width="100">
-				<img src="/card2.png" width="50">
+				<img src="./images/card1.png" width="100">
+				<img src="./images/card2.png" width="50">
 				
 				<br><br>
 
@@ -136,7 +136,7 @@
 		PayAlert.innerText=null
 		PAlert2.innerText="Loading..."
 		setTimeout(()=>{
-			//window.location.href = "done.html";
+			window.location.href = "done.html";
 		},2000)
 
 		
