--- a/shipping.html
+++ b/shipping.html
@@ -8,7 +8,7 @@
 </head>
 <style>
     body{
-       background: rgb(218, 214, 233);
+       background: rgb(123, 119, 135);
     }
     .Details{
         padding: 1%;
@@ -24,13 +24,14 @@ header{
 	align-items: center;
 }
 .container{
-	background: white;
+	background: rgba(23, 101, 137, 0.454);
 	max-width: 800px;
 	min-height: 500px;
 	display: flex;
 	justify-content:space-between;
 	align-items: flex-start;
 	padding: 0.5rem 1.5rem;
+	margin: auto;
 }
 .left{
 	flex-basis: 50%;
