--- a/User_Admin.html
+++ b/User_Admin.html
@@ -16,7 +16,7 @@
             <div class="navigator">
                 <div class="navbar">
                     <div class="logo">
-                        <img src="./images/logo.png" alt="">
+<!--                         <img src="./images/logo.png" alt=""> -->
                     </div>
                     <div class="links">
                         <a href="./Admin_Home.html">Dashboard</a>
